k8s/multi-container/simple-app-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: simple-app
  ports:
    - port: 3000
      targetPort: 3000
