k8s/multi-container/simple-app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
spec:
  replicas: 2
  selector:
    matchLabels:
      component: simple-app
  template:
    metadata:
      labels:
        component: simple-app
    spec:
      containers:
        - name: simple-app
          image: kevinoliveira/simple-app
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-app-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: simple-app
  ports:
    - port: 3000
      targetPort: 3000
