k8s/multi-container/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: 'cert-manager-issuer' # HTTPS certificate
    nginx.ingress.kubernetes.io/ssl-redirect: 'true' # Redirect HTTP to HTTPS
spec:
  tls:
    - hosts:
        - yourdomain.com
        - www.yourdomain.com
      secretName: yourdomain-com
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: simple-app-cluster-ip
                port:
                  number: 3000
          # - path: /api/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: simple-app-cluster-ip
          #       port:
          #         number: 5000

    - host: www.yourdomain.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: simple-app-cluster-ip
                port:
                  number: 3000
          # - path: /api/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: simple-app-cluster-ip
          #       port:
          #         number: 5000
